[package]
name = "morse"
version = "0.1.0"
authors = ["Geoff Liu <hi@geoffliu.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
xml-rs = "0.8.0"
chrono = "0.4"
